# http-server-rust

./: Cargo.toml
entities/: Cargo.toml
entities/src/: mod.rs  posts.rs  prelude.rs  users.rs
migration/: .env  .gitignore  Cargo.toml
migration/src/: lib.rs  m20240823_131140_create_table_users.rs  m20240823_132522_create_table_post.rs
src/: main.rs
src/commons/: aes.rs  config.rs  jwt.rs  mod.rs
src/controllers/: auth_controller.rs  hello.rs  mod.rs  user_controller.rs
src/entities/: mod.rs  user_entity.rs
src/middlewares/: auth_middleware.rs
src/models/: mod.rs  user_service.rs
src/requests/: mod.rs
src/responses/: auth.rs  mod.rs
src/services/: auth_service.rs  mod.rs
