[package]
name = "http-server-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entities"]


[dependencies]
entities = { path = "entities" }
actix-web = "4"
sea-orm = { version = "1.0.0-rc.5", features = [ 
        "sqlx-postgres", 
        "macros" ,
        "runtime-tokio"
] }
log = "0.4"
serde = "1.0.209"
serde_json = "1.0.127"
env_logger = "0.11.5"
