[package]
name = "http-server-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entities"]


[dependencies]
entities = { path = "entities" }
actix-web = "4"
sea-orm = { version = "1.0.0-rc.5", features = [ 
        "sqlx-postgres", 
        "macros" ,
        "runtime-tokio"
] }
log = "0.4"
serde = "1.0.209"
serde_json = "1.0.127"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
aes = "0.8.4"
cipher = "0.4.4"
hex = "0.4.3"
cbc = "0.1.2"
